// Arvutiklasside broneerimise ERD
// Kleebi see dbdiagram.io-sse ja ekspordi PNG

Table classroom {
  id integer [pk, increment]
  name text [not null]
  building text [not null]
  room_number text [not null]
  capacity integer [not null]
  has_projector integer [not null, default: 0]
}

Table user_or_group {
  id integer [pk, increment]
  name text [not null]
  email text [not null]
  type text [not null, note: "'teacher' | 'group'"]
}

Table lesson_type {
  id integer [pk, increment]
  name text [not null, unique]
}

Table booking {
  id integer [pk, increment]
  classroom_id integer [not null, ref: > classroom.id]
  user_id integer [not null, ref: > user_or_group.id]
  lesson_type_id integer [not null, ref: > lesson_type.id]
  date text [not null]
  start_time text [not null]
  end_time text [not null]
  participants integer [not null, default: 0, note: 'CHECK >= 0']
  description text

  Note: 'CHECK (end_time > start_time)'
}
